# RAG-system

./: generation.py  pyproject.toml  retrieved_baseline_results.json  retrieved_bge_base_results.json  retrieved_bge_large_results.json  retrieved_openai_no_rerank_results.json  retrieved_openai_rerank_results.json  retrieved_openai_results.json  run_generation_from_retrieved.py  text_utils.py
baseline/: predictions.gen.G0.json  predictions.gen.G1.json  predictions.gen.G2.json  predictions.gen.G3.json  predictions.gen.G4.json
bge_base/: predictions.gen.G0.json  predictions.gen.G1.json  predictions.gen.G2.json  predictions.gen.G3.json  predictions.gen.G4.json
bge_large/: predictions.gen.G0.json  predictions.gen.G1.json  predictions.gen.G2.json  predictions.gen.G3.json  predictions.gen.G4.json
openai/: predictions.gen.G0.json  predictions.gen.G1.json  predictions.gen.G2.json  predictions.gen.G3.json  predictions.gen.G4.json
openai_no_rerank/: predictions.gen.G0.json  predictions.gen.G1.json  predictions.gen.G2.json  predictions.gen.G3.json  predictions.gen.G4.json
openai_rerank/: predictions.gen.G0.json  predictions.gen.G1.json  predictions.gen.G2.json  predictions.gen.G3.json  predictions.gen.G4.json
rag_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
